# hand_gesture_detect

./: CMakeLists.txt  README.md  hand_detect.cpp  main.cpp
hand_detect_v2/: hand_detect.cpp  hand_detect.h  hand_detect.i  说明.txt
